# mm1-demo

./: Cargo.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: rust.yml
apps/actor-hierarchy/: Cargo.toml  sample-config.yml
apps/actor-hierarchy/src/: main.rs
apps/echo-ring/: Cargo.toml
apps/echo-ring/src/: main.rs
apps/multinode/: Cargo.toml
apps/multinode/src/: main.rs
apps/simple-group-chat/: Cargo.toml
apps/simple-group-chat/src/: main.rs
