[package]
name = "echo-ring"
version = "0.1.0"
edition = "2021"

[dependencies]
mm1.workspace = true
mm1-logger.workspace = true

futures = "^0.3"
serde = {version = "^1", features = ["derive"]}
serde_yaml = "^0.9"
thiserror = "^2"
tokio = {version = "^1", features = ["rt","macros", "rt-multi-thread", "net", "io-util", "io-std"]}
